[add] dark purple color as accent

--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -6,23 +6,25 @@ $text_color: if($variant == 'light', black, white);
 $bg_color: if($variant == 'light', #f6f5f4, #161616);
 $fg_color: if($variant == 'light', #2e3436, #eeeeec);
 
+$secondary_accent: #2b0315;
+
 $selected_fg_color: #ffffff;
 $selected_bg_color: if($variant == 'light', #3584e4, darken(#ebe046, 20%));
 $selected_borders_color: if($variant== 'light', darken($selected_bg_color, 15%), darken($selected_bg_color, 30%));
 $selected_text_bg_color: transparentize($selected_bg_color, 0.7);
 $borders_color: if($variant == 'light', darken($bg_color, 18%), darken($bg_color, 10%));
-$alt_borders_color: if($variant == 'light', darken($bg_color, 24%), darken($bg_color, 18%));
-$borders_edge: if($variant == 'light', transparentize(white, 0.2), transparentize($fg_color, 0.93));
+$alt_borders_color: if($variant == 'light', darken($bg_color, 24%), #2b0315 /*darken($bg_color, 18%)*/);
+$borders_edge: if($variant == 'light', transparentize(white, 0.2), #2b0315);
 $link_color: if($variant == 'light', darken($selected_bg_color, 10%), lighten($selected_bg_color, 20%));
 $link_visited_color: if($variant == 'light', darken($selected_bg_color, 20%), lighten($selected_bg_color, 10%));
 $top_hilight: $borders_edge;
-$dark_fill: #2b0315;//mix($borders_color, $bg_color, 50%);
+$dark_fill: #2b0315; //Background of widgets like on/off buttons
 $headerbar_bg_color: if($variant == 'light', lighten($bg_color, 5%), darken($bg_color, 3%));
 $menu_color: $base_color;
 $menu_selected_color: if($variant == 'light', darken($bg_color, 6%), darken($bg_color, 8%));
 
 $scrollbar_bg_color: if($variant == 'light', mix($bg_color, $fg_color, 80%), mix($base_color, $bg_color, 50%));
-$scrollbar_slider_color: mix($fg_color, $bg_color, 60%);
+$scrollbar_slider_color: mix($fg_color, $secondary_accent, 60%);
 $scrollbar_slider_hover_color: mix($fg_color, $bg_color, 80%);
 $scrollbar_slider_active_color: if($variant=='light', darken($selected_bg_color, 10%), lighten($selected_bg_color, 10%));
 
